--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -14,6 +14,7 @@
 
   @media only screen and (max-width: $bp-small) {
     grid-template-rows: repeat(2, min-content);
+    grid-row-gap: 15rem;
   }
 
   &__nav {
@@ -154,7 +155,7 @@
         transform: translateY(-1.8rem);
       }
       &::after {
-        transform: translateY(-2.9rem);
+        transform: translateY(-3rem);
       }
     }
 
